Finish local search mutation without fitness